[package]
name = "report_rust"
version = "0.1.0"
authors = ["Isaac Santaolalla <isaac.santaolalla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pixels = "0.2.0"

winit = "0.22.0"
winit_input_helper = "0.6.0"